src/milestone_health/snapshots/maestro__milestone_health__patch__tests__milestone_health__patch_add_missing_issue.snap
---
source: src/milestone_health/patch.rs
expression: out
---
Header.

## Dependency Graph (Implementation Order)

Level 0 — no dependencies:
• #1 a
• #7 g

Sequence: #1 ∥ #7
