src/milestone_health/snapshots/maestro__milestone_health__patch__tests__milestone_health__patch_cycle_break.snap
---
source: src/milestone_health/patch.rs
expression: out
---
Header.

## Dependency Graph (Implementation Order)

Cycle members (resolve before assigning levels):
• #4 a
• #5 b

Sequence: (empty)

> Note: cycles were detected and listed above; resolve them before merging.
