src/milestone_health/snapshots/maestro__milestone_health__patch__tests__milestone_health__patch_sequence_parallel.snap
---
source: src/milestone_health/patch.rs
expression: out
---
Header.

## Dependency Graph (Implementation Order)

Level 0 — no dependencies:
• #1 a

Level 1 — depends on Level 0:
• #2 b
• #3 c

Level 2 — depends on Level 1:
• #4 d

Sequence: #1 → #2 ∥ #3 → #4
