src/milestone_health/snapshots/maestro__milestone_health__patch__tests__milestone_health__patch_wrong_level_fix.snap
---
source: src/milestone_health/patch.rs
expression: out
---
Header summary.

## Dependency Graph (Implementation Order)

Level 0 — no dependencies:
• #1 a
• #2 b

Level 1 — depends on Level 0:
• #3 c

Sequence: #1 ∥ #2 → #3
